<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161414"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="6dp"
        android:background="#6BC3CE"
        android:gravity="right"
        android:text="@string/pantallaresultado"
        android:textSize="96sp"
        android:textStyle="bold"
        android:verticalScrollbarPosition="right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textView"
            android:layout_width="203dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Marca"
            android:textColor="#F2F4F5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/borra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="Borrar"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/siete"
            android:textSize="60sp" />

        <Button
            android:id="@+id/boton8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/ocho"
            android:textSize="60sp" />

        <Button
            android:id="@+id/boton9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/nueve"
            android:textSize="60sp" />

        <Button
            android:id="@+id/resta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC107"
            android:onClick="botonPulsado"
            android:scrollbarSize="4dp"
            android:shadowColor="#3F51B5"
            android:singleLine="false"
            android:text="@string/resta"
            android:textSize="50sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/cuatro"
            android:textSize="60sp" />

        <Button
            android:id="@+id/boton5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/cinco"
            android:textSize="60sp" />

        <Button
            android:id="@+id/boton6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/seis"
            android:textSize="60sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC107"
            android:onClick="botonPulsado"
            android:text="@string/division"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/uno"
            android:textSize="60sp" />

        <Button
            android:id="@+id/boton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/dos"
            android:textSize="60sp" />

        <Button
            android:id="@+id/boton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/tres"
            android:textSize="60sp" />

        <Button
            android:id="@+id/multiplica"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC107"
            android:onClick="botonPulsado"
            android:text="@string/multiplicacion"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/cero"
            android:textSize="60sp" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="botonPulsado"
            android:text="@string/decimal"
            android:textSize="60sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/igual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FF5722"
            android:onClick="botonPulsado"
            android:text="@string/resultado"
            android:textSize="50sp" />

        <Button
            android:id="@+id/suma"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC107"
            android:clickable="true"
            android:onClick="botonPulsado"
            android:text="@string/suma"
            android:textSize="50sp" />
    </LinearLayout>

</LinearLayout>